<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_gradient"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="#FFFF00"
        android:textColorHint="#FFFF00" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFF00" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="#FFFF00"
        android:textColorHint="#FFFF00"
        tools:ignore="TextContrastCheck" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFF00" />

    <Button
        android:id="@+id/Login_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login_header"
        android:textColor="#0000ff" />

    <TextView
        android:id="@+id/Register_Link"
        android:layout_width="199dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_gradient"
        android:paddingTop="6dp"
        android:text="@string/new_user_register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>